[gd_scene load_steps=9 format=3 uid="uid://5g0ck17xo6y0"]

[ext_resource type="Script" uid="uid://m0h24osf5ffj" path="res://Levels/UI/main_menu.gd" id="1_4cwpn"]
[ext_resource type="Texture2D" uid="uid://3yciuak73kd2" path="res://assets/icon.svg" id="1_p8ccj"]
[ext_resource type="Script" uid="uid://c4v1v1ymqatyg" path="res://Levels/UI/menu.gd" id="1_tk8dj"]
[ext_resource type="Texture2D" uid="uid://bv58m5ar8agh6" path="res://assets/ilovethisbg.png" id="2_8ctay"]
[ext_resource type="Script" uid="uid://dtlrtrftvhm8e" path="res://Levels/UI/exit_confirm.gd" id="3_d8nwk"]
[ext_resource type="Script" uid="uid://dlaebbrda0pel" path="res://Levels/UI/logo_buttons.gd" id="3_f40uw"]
[ext_resource type="Script" uid="uid://bnwujv5lftxlp" path="res://Levels/UI/main_settings_panel.gd" id="7_ev3b6"]

[sub_resource type="Theme" id="Theme_k0a0m"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4cwpn")

[node name="background color" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_8ctay")
expand_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Menu" type="Panel" parent="."]
custom_minimum_size = Vector2(1200, 860)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 300.0
offset_top = -292.5
offset_right = 1500.0
offset_bottom = 507.5
grow_vertical = 2
script = ExtResource("1_tk8dj")

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Hello Gamerinho,"

[node name="game" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Start Game
"

[node name="options" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Options"

[node name="creds" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Credits
"

[node name="ausgang" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Exit
"

[node name="version" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 236.0
grow_vertical = 0
text = "Ver.0.0.0.0.0.0.0.0 / build: none"

[node name="logo_buttons" type="HBoxContainer" parent="."]
layout_mode = 1
offset_left = 350.0
offset_top = 20.0
offset_right = 700.0
offset_bottom = 220.0
scale = Vector2(3, 3)
script = ExtResource("3_f40uw")

[node name="logo_button" type="TextureButton" parent="logo_buttons"]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("1_p8ccj")
texture_pressed = ExtResource("1_p8ccj")

[node name="patreon_button" type="TextureButton" parent="logo_buttons"]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("1_p8ccj")
texture_pressed = ExtResource("1_p8ccj")

[node name="exit_confirm" type="GridContainer" parent="."]
custom_minimum_size = Vector2(1600, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -300.0
offset_right = 600.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_d8nwk")

[node name="ColorRect" type="PanelContainer" parent="exit_confirm"]
custom_minimum_size = Vector2(2000, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="exit_confirm/ColorRect"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="exit_confirm/ColorRect/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="exit_confirm/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Are you sure you want to quit?"
justification_flags = 131
uppercase = true

[node name="yes" type="Button" parent="exit_confirm/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "I regret to inform you I would like to terminate my session"

[node name="no" type="Button" parent="exit_confirm/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "I have no interest in terminating my amazing session
"

[node name="MainSettingsPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(2800, 1800)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1300.0
offset_top = -900.0
offset_right = 1300.0
offset_bottom = 900.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_ev3b6")

[node name="MarginContainer" type="MarginContainer" parent="MainSettingsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 220
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 220
theme_override_constants/margin_bottom = 80

[node name="VBox" type="VBoxContainer" parent="MainSettingsPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="MarginContainer" type="MarginContainer" parent="MainSettingsPanel/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 100

[node name="Label" type="Label" parent="MainSettingsPanel/MarginContainer/VBox/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "SETTINGS"

[node name="ResPanel" type="Panel" parent="MainSettingsPanel/MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
theme = SubResource("Theme_k0a0m")

[node name="MarginContainer" type="MarginContainer" parent="MainSettingsPanel/MarginContainer/VBox/ResPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="Label" type="Label" parent="MainSettingsPanel/MarginContainer/VBox/ResPanel/MarginContainer"]
layout_mode = 2
text = "Resolution"

[node name="ResolutionOption" type="OptionButton" parent="MainSettingsPanel/MarginContainer/VBox/ResPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="FullscreenPanel" type="Panel" parent="MainSettingsPanel/MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
theme = SubResource("Theme_k0a0m")

[node name="MarginContainer" type="MarginContainer" parent="MainSettingsPanel/MarginContainer/VBox/FullscreenPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="Label" type="Label" parent="MainSettingsPanel/MarginContainer/VBox/FullscreenPanel/MarginContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="FullscreenCheck" type="CheckButton" parent="MainSettingsPanel/MarginContainer/VBox/FullscreenPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4

[node name="BorderPanel" type="Panel" parent="MainSettingsPanel/MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
theme = SubResource("Theme_k0a0m")

[node name="MarginContainer" type="MarginContainer" parent="MainSettingsPanel/MarginContainer/VBox/BorderPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="Label" type="Label" parent="MainSettingsPanel/MarginContainer/VBox/BorderPanel/MarginContainer"]
layout_mode = 2
text = "Borderless"

[node name="BorderCheck" type="CheckButton" parent="MainSettingsPanel/MarginContainer/VBox/BorderPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4

[node name="VolPanel" type="Panel" parent="MainSettingsPanel/MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
theme = SubResource("Theme_k0a0m")

[node name="MarginContainer" type="MarginContainer" parent="MainSettingsPanel/MarginContainer/VBox/VolPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="Label" type="Label" parent="MainSettingsPanel/MarginContainer/VBox/VolPanel/MarginContainer"]
layout_mode = 2
text = "Volume"

[node name="SoundSlide" type="HSlider" parent="MainSettingsPanel/MarginContainer/VBox/VolPanel/MarginContainer"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
tick_count = 20

[node name="DarkPanel" type="Panel" parent="MainSettingsPanel/MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
theme = SubResource("Theme_k0a0m")

[node name="MarginContainer" type="MarginContainer" parent="MainSettingsPanel/MarginContainer/VBox/DarkPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="Label" type="Label" parent="MainSettingsPanel/MarginContainer/VBox/DarkPanel/MarginContainer"]
layout_mode = 2
text = "Dark Mode"

[node name="DarkCheck" type="CheckButton" parent="MainSettingsPanel/MarginContainer/VBox/DarkPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4

[node name="Apply" type="Button" parent="MainSettingsPanel/MarginContainer/VBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
text = " Apply "

[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/game" to="." method="_on_game_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/creds" to="." method="_on_creds_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/ausgang" to="." method="_on_ausgang_pressed"]
[connection signal="pressed" from="exit_confirm/ColorRect/MarginContainer/VBoxContainer/yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="exit_confirm/ColorRect/MarginContainer/VBoxContainer/no" to="." method="_on_no_pressed"]
